--- a/basics.ipynb
+++ b/basics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBhQXsEoaHh4ppq7HFPoVb",
+      "authorship_tag": "ABX9TyP+ZhfpfmiPgXiLvxA2OgSh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -84,7 +84,7 @@
         "id": "zdnDYAFouUz4",
         "outputId": "98219152-4c5d-4317-b136-9c8d0f851b89"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +131,7 @@
         "id": "B4baILCRxTDR",
         "outputId": "adcb0f50-1095-4ce3-f52e-5828c7a8c9c4"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
         "id": "iO2ouvRyxOpF",
         "outputId": "2511da7a-5623-47fa-bf0e-9875395bf8db"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +204,7 @@
         "id": "Q--tWCxn2sUC",
         "outputId": "24a2c85c-0937-4707-f5ed-08d99d530d52"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,7 +243,7 @@
         "id": "XmUnnM814Na2",
         "outputId": "c87c98a8-1c77-485a-fa75-de78c4a3df16"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,7 +282,7 @@
         "id": "m5FJtZ6n-8g7",
         "outputId": "31492f4e-d02a-429f-b15d-962f4058782b"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,7 +335,7 @@
         "id": "K7e85EVJAkKy",
         "outputId": "0b2a599e-d0e8-48e9-dcd4-3a5a90e25122"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,7 +376,7 @@
         "id": "Nk8wPBRRBiWe",
         "outputId": "b80c5f80-4e8a-481a-d639-b8abc3b8b55b"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +402,7 @@
         "id": "2SXIwEwzDpni",
         "outputId": "6af04b5d-33ba-4b2c-803b-871648ce18c7"
       },
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -463,7 +463,7 @@
         "id": "bQEgmwyPEotU",
         "outputId": "83b832df-c371-4ad7-aca9-67eafbb5334d"
       },
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +523,7 @@
         "id": "7VP5Z4P-JofY",
         "outputId": "97c3c91a-a1e9-415c-ad66-ac16418021d5"
       },
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,7 +570,7 @@
         "id": "IxsXf8lWMGnU",
         "outputId": "fbde1a8b-df45-46cb-c6c0-88cbbc76baf9"
       },
-      "execution_count": null,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
@@ -629,7 +629,7 @@
         "id": "N7JSVdq4S0CG",
         "outputId": "85d8625c-586f-49ae-d23a-cdca6cf3ccdf"
       },
-      "execution_count": null,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "stream",
@@ -674,7 +674,7 @@
         "id": "6ic9wGCXWgys",
         "outputId": "947d5fcb-1276-43be-c58e-76603029b1a0"
       },
-      "execution_count": null,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
@@ -711,9 +711,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QY90rkDLXZv4",
-        "outputId": "1296fc63-eaab-461f-eff9-750be0d384af"
+        "outputId": "a32b4075-5446-4ed5-d648-c24d44ac31c9"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -722,6 +722,150 @@
             "True\n",
             "False\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "print print(*objects, sep=' ', end='\\n', file=sys.stdout, flush=False)\n"
+      ],
+      "metadata": {
+        "id": "VoTU3p3qD22Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=5\n",
+        "b=9\n",
+        "print(a,b,sep='\\n',end='\\n')\n",
+        "print('Hello {name}, {greeting}'.format(greeting = 'Goodmorning', name = 'John'))\n",
+        "x=12.345678\n",
+        "print('The value of x is %6.2f' %x)  # rounded to two decimal values\n",
+        "print('The value of x is %13.4f' %x)  # rounded to four decimal value\n",
+        "print('test{:5d}'.format(123)) # number takes 5 spaces equivalent to %5d in C , uses 5 field width test  123\n",
+        "print(\"%6s\"%\"sami\")\n",
+        "print(\"%-6s\"%\"sami\") # print the string left justified"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G9KYsHIeD4jG",
+        "outputId": "b6a185c6-2908-4cc6-8d42-2c6bb1acb5f8"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "9\n",
+            "Hello John, Goodmorning\n",
+            "The value of x is  12.35\n",
+            "The value of x is       12.3457\n",
+            "test  123\n",
+            "  sami\n",
+            "sami  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Python3 program introducing f-string\n",
+        "name = 'sami'\n",
+        "age = 21\n",
+        "print(f\"Hello, My name is {name} age is {age}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WheDePz6IN37",
+        "outputId": "f5a68565-4d07-4057-aa35-e78e1feca3e8"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, My name is sami age is 21\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import datetime\n",
+        "today=datetime.datetime.today()\n",
+        "print(f\"{today: %B %d,%Y}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EvwvQXCOIVD4",
+        "outputId": "6d30e4f1-6821-491c-ad24-3ad458e54c02"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " March 13,2024\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "input()"
+      ],
+      "metadata": {
+        "id": "_3biTqc-I_Yz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = input('Enter a number: ')\n",
+        "print(f\"number is {num}\")\n",
+        "eval('3+4')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qEZHUqYGI9f1",
+        "outputId": "c00f6cff-d03b-476f-842d-6be57be9283d"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 5\n",
+            "number is 5\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     }
